<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LaB-Om-dDl">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Root View Controller-->
        <scene sceneID="Dm8-Wh-N10">
            <objects>
                <tableViewController id="W4w-Bx-9xf" customClass="ViewController" customModule="Shari_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9ET-qR-Wu5">
                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="test" textLabel="7WD-kx-g2U" style="IBUITableViewCellStyleDefault" id="Wun-hJ-q5a">
                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wun-hJ-q5a" id="j1u-VE-Dai">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7WD-kx-g2U">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="Ol8-ai-05K" kind="show" id="z6a-4o-gyp"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="W4w-Bx-9xf" id="S68-Px-8IL"/>
                            <outlet property="delegate" destination="W4w-Bx-9xf" id="zoN-aN-lfq"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Root View Controller" id="8mj-kQ-k21"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="L28-33-Hr6" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="616" y="521"/>
        </scene>
        <!--Detail View Controller-->
        <scene sceneID="Z6T-hL-iNp">
            <objects>
                <viewController id="Ol8-ai-05K" customClass="DetailViewController" customModule="Shari_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jdt-A6-hKk"/>
                        <viewControllerLayoutGuide type="bottom" id="ZEw-5e-Vkb"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="e4G-U9-sCd">
                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6W-lh-i3C">
                                <rect key="frame" x="20" y="32" width="46" height="30"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="buttonDidTap:" destination="Ol8-ai-05K" eventType="touchUpInside" id="Le8-gq-g6o"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="P6W-lh-i3C" firstAttribute="leading" secondItem="e4G-U9-sCd" secondAttribute="leadingMargin" id="Cgd-5P-eLd"/>
                            <constraint firstItem="P6W-lh-i3C" firstAttribute="top" secondItem="jdt-A6-hKk" secondAttribute="bottom" constant="32" id="xJt-8N-Tih"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dqF-9W-kNc" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1296" y="521"/>
        </scene>
        <!--modal-->
        <scene sceneID="kuQ-pM-A7g">
            <objects>
                <tableViewController storyboardIdentifier="ModalTableViewController" id="6iZ-sq-J3f" customClass="ModalTableViewController" customModule="Shari_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Zf3-V6-stU">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <inset key="scrollIndicatorInsets" minX="0.0" minY="64" maxX="0.0" maxY="0.0"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="ALE-vz-lQD" style="IBUITableViewCellStyleDefault" id="4Lo-wU-Ecr">
                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4Lo-wU-Ecr" id="r7v-XQ-o6X">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ALE-vz-lQD">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="6iZ-sq-J3f" id="CBf-Av-3gY"/>
                            <outlet property="delegate" destination="6iZ-sq-J3f" id="Is7-x6-Ic1"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="modal" id="BHz-Ob-nvG">
                        <barButtonItem key="leftBarButtonItem" title="Close" id="Nwb-Ce-Axs">
                            <connections>
                                <action selector="closeButtonDidTap:" destination="6iZ-sq-J3f" id="Sqw-bV-rwI"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sm1-D7-YuO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1296" y="1212"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="TXh-nN-SgF">
            <objects>
                <navigationController storyboardIdentifier="ModalNavigationController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vLy-dl-QhB" customClass="NavigationController" customModule="Shari" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HXm-vs-MSe">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="6iZ-sq-J3f" kind="relationship" relationship="rootViewController" id="IDh-VC-Ugd"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bWc-5k-P3t" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="616" y="1219"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="khN-RM-x84">
            <objects>
                <navigationController id="LaB-Om-dDl" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Egx-Vs-Wes">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="W4w-Bx-9xf" kind="relationship" relationship="rootViewController" id="TNB-7x-a03"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="NES-g4-Bus" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-65" y="521"/>
        </scene>
    </scenes>
</document>
