...
                            <constraint firstItem="VTa-76-jqd" firstAttribute="leading" secondItem="M4u-zN-B2b" secondAttribute="leading" id="NEk-Yt-Szh"/>
                            <constraint firstItem="VTa-76-jqd" firstAttribute="top" secondItem="FLV-ZD-3wH" secondAttribute="bottom" id="TaK-5s-BT3"/>
                            <constraint firstAttribute="trailing" secondItem="VTa-76-jqd" secondAttribute="trailing" id="wNR-h0-3nB"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="jTX-Du-mBV">
                        <barButtonItem key="leftBarButtonItem" title="Close" id="e1F-bG-gFl">
                            <connections>
                                <action selector="closeButtonDidTapWithButton:" destination="cBG-3I-UA0" id="ZUa-iR-zZc"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0zV-9g-jmZ" id="o9R-sG-YiB">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Qfz-mL-HJB">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                    <view key="view" contentMode="scaleToFill" id="dgA-0E-p6n">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJc-4S-9KJ">
                                <rect key="frame" x="16" y="0.0" width="343" height="41"/>
                                <accessibility key="accessibilityConfiguration" label="Button1"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Show with the navigationBar"/>
                                <connections>
                                    <action selector="buttonDidTapWithButton:" destination="JDH-sg-6eo" eventType="touchUpInside" id="LPS-lx-y9o"/>
                                </connections>
                            </button>
...
                            <constraint firstAttribute="trailingMargin" secondItem="lw0-ya-xwW" secondAttribute="trailing" id="ihw-Bx-LP7"/>
                            <constraint firstAttribute="trailingMargin" secondItem="7fz-Oy-NST" secondAttribute="trailing" id="lXz-mR-yGD"/>
                            <constraint firstItem="7fz-Oy-NST" firstAttribute="top" secondItem="HeW-rr-2lW" secondAttribute="bottom" id="nPh-tc-xsW"/>
                            <constraint firstItem="lw0-ya-xwW" firstAttribute="top" secondItem="7fz-Oy-NST" secondAttribute="bottom" constant="8" id="tyS-Rl-ipO"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="TabBar" id="tOr-dr-Ibn"/>
                    <navigationItem key="navigationItem" id="xha-gd-Znr"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7r6-Ap-za1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2186" y="-218"/>
        </scene>
...
