...
        completion: @escaping () -> Void) {

        let overlayView = UIView(frame: fromView.bounds)
        overlayView.backgroundColor = ShariSettings.backgroundColorOfOverlayView
        overlayView.isUserInteractionEnabled = true
        overlayView.tag = InternalStructureViewType.Overlay.rawValue
        overlayView.accessibilityLabel = "ShariOverlayView"
        overlayView.alpha = 0
        fromView.addSubview(overlayView)

        if ShariSettings.isUsingScreenShotImage {
            self.addScreenShotView(capturedView: fromView, screenshotContainer: overlayView)
        }
...
